update create logbook dialog
